pic overlap fix

--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -545,7 +545,7 @@ section.my-work .section-heading {
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: 250px;
     border-radius: 5px;
 }
 
